Fix z-index of circle

--- a/public/modules/projects/css/project.css
+++ b/public/modules/projects/css/project.css
@@ -205,6 +205,7 @@ CARUSEL
     right: 23%;
     height: 10em;
     width: 10em;
+    z-index: 0;
 }
 
 
